--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <section class="about">
-  <h2 class="about-title">About</h2>
+  <h3 class="about-title">About Page</h3>
 </section>
 </body>
 </html>
